src/objects/Subscription_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription Histories</relationshipLabel>
        <relationshipName>Subscription_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <label>Acquisition Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addon_Package__c</fullName>
        <label>Addon Package</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asia_1_creation_mode__c</fullName>
        <label>Asia 1 creation mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <label>Auto Renew</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charity__c</fullName>
        <label>Charity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_details__c</fullName>
        <label>Cheque details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Delivery_Address__c</fullName>
        <label>Contact Delivery Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_expire__c</fullName>
        <label>Days to expire</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_By__c</fullName>
        <label>Delivered By</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Address_Details__c</fullName>
        <label>Delivery Address Details</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge_Type__c</fullName>
        <label>Delivery Charge Type</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIRO_Payment_Indicator__c</fullName>
        <label>GIRO Payment Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <label>Generate Invoice</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_ID__c</fullName>
        <label>Gift ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Days__c</fullName>
        <label>Grace Period (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Subscription__c</fullName>
        <label>Grace Period Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Package__c</fullName>
        <label>Main Package</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contract_Period__c</fullName>
        <label>New Contract Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies__c</fullName>
        <label>Number of Copies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Legacy_Id__c</fullName>
        <label>Package Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal_Payment_Profile_Id__c</fullName>
        <label>Paypal Payment Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge__c</fullName>
        <label>Penalty Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Contract_Period__c</fullName>
        <label>Promotion Contract Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pstop_Date__c</fullName>
        <label>Pstop Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pub_Tag__c</fullName>
        <label>Pub Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact__c</fullName>
        <label>Recipient Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Order_Number__c</fullName>
        <label>Renewal Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Request_Date__c</fullName>
        <label>Renewal Request Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsored_Indicator__c</fullName>
        <label>Sponsored Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsored__c</fullName>
        <label>Sponsored?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_As__c</fullName>
        <label>Subscribe As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Charge__c</fullName>
        <label>Subscription Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_History_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Subscription History Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Acknowledgement_Letter__c</fullName>
        <label>Suppressed Acknowledgement Letter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Renewal_and_Reminder_Letter__c</fullName>
        <label>Suppressed Renewal and Reminder Letter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Vendor_Start_Notification__c</fullName>
        <label>Suppressed Vendor Start Notification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Address_ID__c</fullName>
        <label>Unique Address ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <label>Urgent?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Number__c</fullName>
        <label>Vendor Contact Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Conversion__c</fullName>
        <label>Vendor Conversion?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Credit__c</fullName>
        <label>Vendor Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Legacy_Id__c</fullName>
        <label>Vendor Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription__c</fullName>
        <label>Vendor Subscription</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Subscription History</label>
    <nameField>
        <label>Subscription History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>